<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectengle_uppercorner"
    tools:context=".RandomMarInspectionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_pam_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_ap_new"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_pay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/colorPrimaryLight"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="Payment Information Deposited to Ograss"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_adalat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/date_sel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectengle_uppercorner"
                    android:drawableLeft="@drawable/date_picker"
                    android:gravity="center"
                    android:hint="-- Select date --"
                    android:inputType="date"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_court_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/court">

                    <EditText
                        android:id="@+id/edit_court_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/sp_paymode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectengle_uppercorner" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_grn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/grn_no">

                    <EditText
                        android:id="@+id/edit_grn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_amt_tot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/payment_amt">

                    <EditText
                        android:id="@+id/edit_pay_amt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_no_of_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/consumer_count">

                    <EditText
                        android:id="@+id/edit_no_of_con"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/ll_com_consumer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimaryLight"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="Compounding Fee Information"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_case_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/case_no">

                        <EditText
                            android:id="@+id/edit_case_no"
                            android:layout_width="match_parent"
                            android:textAllCaps="true"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_com_amt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight=".6"
                            android:hint="@string/compounding_amt">

                            <EditText
                                android:id="@+id/edit_amount_com"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimaryLight"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="Accused Details"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/sp_con_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rectengle_uppercorner" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_con_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/consumer_id">

                        <EditText
                            android:id="@+id/edit_com_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- -->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_con_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/consumer_name">

                        <EditText
                            android:id="@+id/edit_consumer_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_con_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/consumer_add">

                        <EditText
                            android:id="@+id/edit_consumer_add"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/sp_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rectengle_uppercorner" />

                    <Spinner
                        android:id="@+id/sp_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rectengle_uppercorner" />
                </LinearLayout>

            </LinearLayout>



            <Button
                android:id="@+id/button_final_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Final Submit"
                app:icon="@drawable/final_submit" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

